--- a/src/main/resources/static/css/appointmentsStyle.css
+++ b/src/main/resources/static/css/appointmentsStyle.css
@@ -57,7 +57,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    /*background-image: url('../img/image_3.jpg');*/
+    background-image: url('../img/image_5.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     /* Alte proprietăți CSS pentru a personaliza imaginea de fundal */
