--- a/src/main/resources/static/css/viewAppointmentStyle.css
+++ b/src/main/resources/static/css/viewAppointmentStyle.css
@@ -1,6 +1,5 @@
 
-
-.appointment {
+.pet {
     text-align: center;
     margin: 25px auto 0;
     max-width: 400px;
@@ -9,17 +8,39 @@
     background-color: rgba(46,138,195,0.2);
 }
 
-.appointment a {
+
+.pet h2 {
     color: black;
-    font-size: 30px;
-}
-.appointment .petId {
-    color: white;
-}
-.appointment .petName {
-    color: white;
 }
 
+.pet .specie {
+    font-style: italic;
+    color: black;
+}
+
+.pet .breed {
+    margin-top: 10px;
+    color: black;
+}
+
+.pet .gender {
+    font-weight: bold;
+    color: white;
+    margin-top: 10px;
+}
+.pet .dateOfBirth {
+    font-weight: bold;
+    color: white;
+    margin-top: 10px;
+}
+.appointment {
+    text-align: center;
+    margin: 25px auto 0;
+    max-width: 400px;
+    padding: 20px;
+    border: 1px solid black;
+    background-color: rgba(46,138,195,0.2);
+}
 .appointment .type {
     font-style: italic;
     color: white;
@@ -48,9 +69,6 @@
     font-weight: bold;
     color: white;
     margin-top: 10px;
-}
-.form-group{
-    text-align: center;
 }
 
 
